# agentd

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  INSTALL.md  LICENSE  Makefile  README.md  install.sh
.agentd-backup/: CHANGELOG.md  archived-command.md
.claude/: settings.local.json
.claude/skills/agentd-archive/: SKILL.md
.claude/skills/agentd-challenge/: SKILL.md
.claude/skills/agentd-fix/: SKILL.md
.claude/skills/agentd-impl/: SKILL.md
.claude/skills/agentd-implement/: SKILL.md
.claude/skills/agentd-plan/: SKILL.md
.claude/skills/agentd-plan-change/: SKILL.md
.claude/skills/agentd-proposal/: SKILL.md
.claude/skills/agentd-reproposal/: SKILL.md
.claude/skills/agentd-resolve-reviews/: SKILL.md
.claude/skills/agentd-review/: SKILL.md
.claude/skills/agentd-verify/: SKILL.md
.gemini/: settings.json
.gemini/commands/agentd/: changelog.toml  merge-specs.toml  proposal.toml  reproposal.toml
.gemini/commands/plan/: create-spec.toml  create-tasks.toml
.github/issues/: README.md  tasks-format-inconsistency.md
.github/workflows/: auto-tag.yml  release.yml
Formula/: specter.rb
agentd/: .mcp.json  CLAUDE.md  config.toml  project.md
agentd/.gemini/: settings.json
agentd/agentd/: config.toml  project.md
agentd/archive/20260117-improve-fillback-2/: AGENTS.md  ARCHIVE_REVIEW.md  CHANGELOG.md  GEMINI.md  IMPLEMENTATION.md  proposal.md  tasks.md
agentd/archive/20260119-progressive-proposal/: AGENTS.md  ARCHIVE_REVIEW.md  CHANGELOG.md  GEMINI.md  IMPLEMENTATION.md  proposal.md  tasks.md
agentd/archive/20260123-fix-workflow-bugs/: AGENTS.md  ARCHIVE_REVIEW.md  GEMINI.md  (+2 more)
agentd/docs/: agentd-plan-workflow.md
agentd/knowledge/: index.md
agentd/mcp-configs/: README.md  implement.json
agentd/schemas/: challenge.schema.json  proposal.schema.json  spec.schema.json  state.schema.json  tasks.schema.json
agentd/scripts/: claude-archive-fix.sh  claude-fix.sh  claude-implement.sh  claude-resolve.sh  codex-archive-review.sh  codex-challenge.sh  codex-rechallenge.sh  codex-review.sh  gemini-archive-fix.sh  gemini-changelog.sh  gemini-fillback.sh  gemini-merge-specs.sh  gemini-proposal.sh  gemini-reproposal.sh
agentd/specs/: CHANGELOG.md  annotations.md  fillback-enhancement.md  mcp-auto-config.md  plan-viewer.md  review-tool.md  workflow-state-machine.md  workflows.md
docs/: RFC-001-validation-enhancement.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/playwright-report/: index.html
e2e/tests/: viewer.spec.ts
examples/scripts/: README.md  codex-challenge.sh  gemini-proposal.sh
src/: context.rs  lib.rs  main.rs
src/cli/: archive.rs  challenge.rs  challenge_proposal.rs  clarifications.rs  file.rs  fillback.rs  fix.rs  implement.rs  implementation.rs  init.rs  knowledge.rs  list.rs  mcp_server.rs  mcp_server_mgmt.rs  migrate_xml.rs  mod.rs  plan.rs  proposal.rs  proposal_engine.rs  refine.rs  reproposal.rs  resolve_reviews.rs  review.rs  revise.rs  server.rs  spec.rs  status.rs  tasks.rs  update.rs  validate_challenge.rs  validate_proposal.rs  verify.rs  view.rs
src/fillback/: ast.rs  code.rs  factory.rs  graph.rs  mod.rs  openspec.rs  speckit.rs  strategy.rs
src/mcp/: config.rs  dashboard.html  http_server.rs  mod.rs  registry.rs  server.rs
src/models/: annotation.rs  archive_review.rs  challenge.rs  change.rs  delta_metrics.rs  frontmatter.rs  mod.rs  requirement.rs  review.rs  scenario.rs  spec_generation.rs  spec_rules.rs  task_graph.rs  validation.rs  verification.rs
src/orchestrator/: claude.rs  cli_mapper.rs  codex.rs  gemini.rs  mod.rs  model_selector.rs  prompts.rs  script_runner.rs
src/parser/: archive_review.rs  challenge.rs  frontmatter.rs  inline_yaml.rs  markdown.rs  mod.rs  proposal.rs  requirement.rs  review.rs  scenario.rs  xml.rs
src/services/: clarifications_service.rs  file_service.rs  implementation_service.rs  knowledge_service.rs  mod.rs  proposal_service.rs  spec_service.rs  tasks_service.rs
src/state/: manager.rs  mod.rs
src/ui/: colors.rs  mod.rs  progress.rs  tables.rs
src/utils/: greeting.rs
src/validator/: challenge.rs  consistency.rs  fix.rs  format.rs  mod.rs  schema.rs  semantic.rs
templates/: AGENTS.md  CLAUDE.md  GEMINI.md  README.md
templates/gemini/: settings.json
templates/prompts/: challenge.md  code_review.md  create_proposal.md  create_spec.md  create_tasks.md  implement.md  reproposal.md  resolve.md  review_impl.md  review_proposal.md  review_spec.md  review_tasks.md  revise_proposal.md  revise_spec.md  revise_tasks.md
templates/skeletons/: archive_review.md  challenge.md  proposal.md  tasks.md
tests/: fillback_test.rs  mcp_implementation_tools.rs  server_unification_test.rs  viewer_test.rs
(+175 files in other folders)
