[package]
name = "agentd"
version = "0.1.4"
edition = "2021"
authors = ["Chris Cheng <chris.cheng@shopee.com>"]
description = "AI agent orchestrator for spec-driven development with iterative proposal refinement"
license = "MIT"

[[bin]]
name = "agentd"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "color"] }
colored = "3"
dialoguer = "0.11"
indicatif = "0.17"

# Parsing
pulldown-cmark = "0.12"
regex = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# Hashing
sha2 = "0.10"

# JSON Schema validation
jsonschema = "0.29"

# Error handling
anyhow = "1"
thiserror = "2"

# File operations
walkdir = "2"
glob = "0.3"

# Git (vendored-openssl for cross-platform builds)
git2 = { version = "0.20", features = ["vendored-openssl"] }

# Process execution (for scripts)
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros"] }

# Terminal UI
crossterm = "0.28"

# Optional: Direct API calls
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
default = []
api-direct = ["reqwest"]

[dev-dependencies]
tempfile = "3"
